@@ -5,6 +5,9 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
 and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
 == [Unreleased]
+=== Changed
+
+* Expose Data field in the Context.
 
 == [0.1.0] - 2018-10-05
 === Added
